--- a/services.html
+++ b/services.html
@@ -54,7 +54,7 @@
     <hr>
 
     <section class="Condition">
-        <h1>Terms $ Condition</h1>
+        <h1>Terms & Condition</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate laborum sapiente, voluptate architecto in aspernatur saepe similique est quae harum vero magni, assumenda ipsum et? Dignissimos unde corporis quas libero accusantium aut doloremque numquam facere magni similique est quisquam tempore ea non neque, ad vero, consequatur dolores sequi. Architecto, aspernatur! Odio explicabo odit porro? Nostrum, commodi modi a maxime non distinctio blanditiis error totam minima tenetur? Consequatur at architecto, expedita veritatis iste dolor laboriosam earum libero porro id perferendis molestiae ex et nam fugiat accusantium blanditiis totam eligendi commodi aliquam obcaecati vero aut? Voluptatem ea quod facilis saepe dignissimos officiis Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, ut numquam? Veritatis, dicta. Eligendi similique blanditiis maxime corrupti. Amet velit rerum quas ad molestiae veritatis vero inventore repudiandae, aut deserunt laboriosam, optio necessitatibus dolorem labore similique sequi praesentium neque corrupti dolore. Laudantium dolores perferendis, reiciendis praesentium pariatur quo, similique repellendus qui voluptatum explicabo cupiditate magni quis sint ullam </p>
     </section>
     
