--- a/index.html
+++ b/index.html
@@ -83,11 +83,13 @@
 
                     <div class="form-control" id="yourEmail">
                         <label for="email" id="emailLabel">Your Email</label>
-                        <input type="email" id="email" placeholder="Email here">
+                        <input type="email" id="email" placeholder="Email here"/>
+                        <div id ='validEmail' class="show hide">Incorrect! enter a valid email</div>
                     </div>
                     <div class="form-control " id="yourNumber">
                         <label for="number" id="numberLabel">How can we contact you?</label>
                         <input type="text" id="number" placeholder="Phone number here">
+                        <div id ='validNumber' class="show hide">Incorrect! enter a valid phone number</div>
                     </div>
 
                     <div class="form-control">
@@ -98,6 +100,7 @@
                     <div class="form-control" id="yourPincode">
                         <label for="pincode" id="pincodeLabel">Pincode</label>
                         <input type="text" id="pincode" placeholder="Pincode here">
+                        <div id ='validPincode' class="show hide">Incorrect! enter a valid pincode</div>
                     </div>
 
                     <div class="form-control">
@@ -105,6 +108,8 @@
                         <textarea id="textarea" cols="10" rows="7"></textarea>
                     </div>
                     <div id ="successMessage">
+                        <div id ='successMsg' class="hide">Your order has been successfully placed</div>
+                        <div id ='errorMsg' class=" show hide">Unsuccesful! try again</div>
                     <button type="submit" class="orderBtn" id="orderBtn">Place the order</button>
                     </div>
                 </form>
